added records support